# Gino

./: .gitignore  README.md  main.py  positions_log.json  pyproject.toml
calibration/: acquire_video.py  calibrate_camera.py  collect_imgs.py
data/: camera_calib.npz  cube_trajectory1.npz  vid2.avi  vid3.avi
data/urdf/: koch.urdf  moss.urdf  so100.urdf  so101.urdf  urdf_gen.py
dev/: compare_trajectories.py  test_1.1.py  test_10_aruco_orientation.py  test_13.py  test_15.py  test_16.py  test_2_recorded_cube_detection.py  test_4.1_actual_joint_inputs.py  test_7_hardcoded_trajectory.py  test_8_real_move_real_time.py  test_8_real_move_real_time_with_pose.py  test_9_gyro_orientation.py
examples/: README.md  orientation_fusion_example.py  simple_orientation_fusion_example.py
resources/: camera_settings.md  lerobot_mods_log.md
src/gino/aruco/: aruco_cube_detection.py  cube_detection.py  recoreded_cube_detection.py  tracker.py  visualization_utils.py
src/gino/controller/: gino_controller.py
src/gino/kinematics/: __init__.py  kalman_filter.py  kinematics.py  move_robot.py  orientation_fusion.py  robot_visualization.py  (+1 more)
tests/: compare_trajectories.py  test_1.1.py  test_11_combined_orientation.py  test_12.py  test_13.py  test_16.py  test_1_simulated_ik.py  test_2_recorded_cube_detection.py  test_3_recorded_cube_detection_ik.py  test_4_joint_slider_control.py  test_5_read_joint_states.py  test_6_move_robot_joints.py  test_8_real_move_real_time.py  test_8_real_move_real_time_with_pose.py  test_cube_orientation.py  test_simulated_ik.py  test_simulated_ik.py.py
(+2 files in other folders)
