[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gino"
version = "0.1.0"
description = "Robot kinematics, vision, and control utilities."
authors = [
    { name = "Giovanni Pegoraro", email = "giovipegoraro@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
# Pinocchio is required for kinematics, but must be installed manually:
# conda install -c conda-forge pinocchio
kinematics = []

# Installation instructions for conda environment:
# 1. Install conda packages: conda install -c conda-forge numpy scipy matplotlib opencv pyserial pinocchio
# 2. Install pip packages: pip install -e .

[tool.setuptools]
# Add package discovery if needed

[tool.mypy]
warn-unreachable = false